feat(characters): routes ready to be filled with real datas when architecture will be locked
