# api/src/docs/swagger.json
@@ -14,14 +14,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "about.json"
+                    "apidata"
                 ],
                 "summary": "Gives informations about api",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.About"
+                            "$ref": "#/definitions/apidata.About"
                         }
                     }
                 }
@@ -204,6 +204,144 @@
                 }
             }
         },
+        "/api/characters": {
+            "get": {
+                "description": "Reads all characters data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "characters"
+                ],
+                "summary": "Reads all characters data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/characters.RowReadResponse"
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "⚠️ Only accessible to admins ⚠️\u003cbr\u003e\u003cbr\u003eUpdates the given character's account data",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "characters"
+                ],
+                "summary": "Updates given ID character with arguments in body",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of the character to update",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "New arguments to be set in the character given",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/characters.UpdateArgs"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "post": {
+                "description": "⚠️ Only accessible to admins ⚠️\u003cbr\u003e\u003cbr\u003eCreates a character account with given informations",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "characters"
+                ],
+                "summary": "Connection of a new character to a new account",
+                "parameters": [
+                    {
+                        "description": "character related informations that will be later needed for the login process",
+                        "name": "creds",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/characters.CreateArgs"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.PostResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes the given character's data\u003cbr\u003e \u003cb\u003eCareful, there is no turn back or check, once called, this route will delete the character no matter what\u003c/b\u003e \u003cbr\u003e It also deletes all content related to the character",
+                "tags": [
+                    "characters"
+                ],
+                "summary": "Deletes given ID character",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of the character to do the action on",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/characters/id": {
+            "get": {
+                "description": "Reads the given id character data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "characters"
+                ],
+                "summary": "Reads given ID character data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of the character to read",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/characters.RowReadResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/health": {
             "get": {
                 "description": "Healthcheck used (mainly by docker) to check if the api is up and ready to respond",
@@ -211,7 +349,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "health"
+                    "apidata"
                 ],
                 "summary": "Healthcheck for the api",
                 "responses": {
@@ -389,6 +527,14 @@
                 }
             }
         },
+        "apidata.About": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.Creds": {
             "type": "object",
             "properties": {
@@ -436,10 +582,38 @@
                 }
             }
         },
-        "endpoints.About": {
+        "characters.CreateArgs": {
             "type": "object",
             "properties": {
-                "status": {
+                "name": {
+                    "type": "string"
+                },
+                "player_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "characters.RowReadResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "player_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "characters.UpdateArgs": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "player_id": {
                     "type": "string"
                 }
             }
